# Multi-Agent-Coding-Assistant

./: .env.example  .gitignore  README.md  api.py  benchmark.py  eval_report.md  main.py  pyproject.toml
agent_graph/: __init__.py  config.py  graph.py  llm_helper.py  mock_llm.py  state.py
agent_graph/nodes/: __init__.py  coder.py  debugger.py  docs_agent.py  executor.py  planner.py  reviewer.py  static_analyzer.py  supervisor.py  test_writer.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
sandbox/: Dockerfile.sandbox  __init__.py  docker_sandbox.py
tests/: test_api.py  test_config.py  test_sandbox.py
