[project]
name = "multi-agent-coding-assistant"
version = "0.1.0"
description = "A supervised multi-agent coding assistant using LangGraph and Docker sandbox."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.60",
    "langchain>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "docker>=7.1.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langchain-google-genai>=4.2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_graph"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
